@@ -1,0 +1,80 @@
+capplet/sawmill-capplet.c
+lisp/sawfish/gtk/widgets/alist.jl
+lisp/sawfish/gtk/widgets/color.jl
+lisp/sawfish/gtk/widgets/file.jl
+lisp/sawfish/gtk/widgets/font.jl.in
+lisp/sawfish/gtk/widgets/list.jl
+lisp/sawfish/gtk/widgets/scheme-boolean.jl
+lisp/sawfish/gtk/widget.jl
+lisp/sawfish/ui/widgets/gtk/workspace-geometry.jl
+lisp/sawfish/ui/apply.jl
+lisp/sawfish/ui/shell.jl
+lisp/sawfish/ui/layouts/keymaps.jl
+lisp/sawfish/ui/widgets/command.jl
+lisp/sawfish/ui/widgets/event.jl
+lisp/sawfish/ui/widgets/icon.jl
+lisp/sawfish/ui/widgets/keymap.jl
+lisp/sawfish/ui/widgets/match-window.jl
+lisp/sawfish/ui/widgets/workspace-geometry.jl
+lisp/sawfish/wm/autoload.jl
+lisp/sawfish/wm/commands.jl
+lisp/sawfish/wm/commands/cycle.jl
+lisp/sawfish/wm/commands/describe.jl
+lisp/sawfish/wm/commands/gnome.jl
+lisp/sawfish/wm/commands/groups.jl
+lisp/sawfish/wm/commands/grow-pack.jl
+lisp/sawfish/wm/commands/help.jl
+lisp/sawfish/wm/commands/move-cursor.jl
+lisp/sawfish/wm/commands/move-resize.jl
+lisp/sawfish/wm/commands/raise-commands.jl
+lisp/sawfish/wm/commands/size-window.jl
+lisp/sawfish/wm/commands/slide-window.jl
+lisp/sawfish/wm/commands/viewport-extras.jl
+lisp/sawfish/wm/commands/viewport-linear.jl
+lisp/sawfish/wm/commands/x-cycle.jl
+lisp/sawfish/wm/commands/xterm.jl
+lisp/sawfish/wm/custom.jl
+lisp/sawfish/wm/customize.jl
+lisp/sawfish/wm/ext/3d-hack.jl
+lisp/sawfish/wm/ext/audio-events.jl
+lisp/sawfish/wm/ext/edge-flip.jl
+lisp/sawfish/wm/ext/error-handler.jl
+lisp/sawfish/wm/ext/match-window.jl
+lisp/sawfish/wm/ext/shade-hover.jl
+lisp/sawfish/wm/ext/tooltips.jl
+lisp/sawfish/wm/ext/window-history.jl
+lisp/sawfish/wm/ext/workspace-grid.jl
+lisp/sawfish/wm/focus.jl
+lisp/sawfish/wm/frames.jl
+lisp/sawfish/wm/gnome/integration.jl
+lisp/sawfish/wm/gnome/menus.jl
+lisp/sawfish/wm/keymaps.jl
+lisp/sawfish/wm/menus.jl
+lisp/sawfish/wm/placement.jl
+lisp/sawfish/wm/placement/stagger.jl
+lisp/sawfish/wm/stacking.jl
+lisp/sawfish/wm/state/gnome.jl
+lisp/sawfish/wm/state/iconify.jl
+lisp/sawfish/wm/state/ignored.jl
+lisp/sawfish/wm/state/maximize.jl
+lisp/sawfish/wm/state/shading.jl
+lisp/sawfish/wm/state/transient.jl
+lisp/sawfish/wm/util/compat.jl
+lisp/sawfish/wm/util/display-window.jl
+lisp/sawfish/wm/util/groups.jl
+lisp/sawfish/wm/util/gtkrc.jl
+lisp/sawfish/wm/util/keymap.jl
+lisp/sawfish/wm/util/play-audio.jl
+lisp/sawfish/wm/util/prompt.jl
+lisp/sawfish/wm/util/prompt-wm.jl
+lisp/sawfish/wm/util/stacking.jl
+lisp/sawfish/wm/viewport.jl
+lisp/sawfish/wm/windows.jl
+lisp/sawfish/wm/workspace.jl
+scripts/sawfish-about.jl.in
+themes/Crux/theme.jl
+themes/gradient/theme.jl
+themes/mono/theme.jl
+themes/simple/theme.jl
+themes/smaker/theme.jl
+
