@@ -1,6 +1,8 @@
 2008-07-29  Christopher Bratusek <nano-master@gmx.de>
 	* po/make-pot: make this script work again
 
+	* po/POTFILES.in: added. needed by the new make-pot
+
 	* sawfish.spec.in: spec file did use deprecated keywords,
 		this patch by Ian Dall fix that.
 
